--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 					<li><a title="Quienes somos" href="#quienesSomos">Quienes somos</a></li>
 					<li><a title="Actividades" href="#actividades">Actividades</a></li>
 					<li><a title="Habitaciones" href="#habitaciones">Instalaciones</a></li>
-					<li><a title="UbicaciÛn" href="#ubicacion">UbicaciÛn</a></li>
+					<li><a title="Ubicaci√≥n" href="#ubicacion">Ubicaci√≥n</a></li>
 					<li><a title="Opus Dei" href="#opus">Opus Dei</a></li>
 					<li><a title="Contacto" href="#contacto">Contacto</a></li>
 				</ul>
@@ -242,30 +242,30 @@
 					<div id="facebook">
 						<h3>Hacete amiga en facebook</h3>
 						<p>Seguinos en facebook y enterate de todas nuestras actividades, noticias y viajes, fotos y recuerdos.</p>
-						<a href="https://www.facebook.com/residencia.laciudadela?fref=ts" target="_blank">ï Ver m·s aquÌ</a>
+						<a href="https://www.facebook.com/residencia.laciudadela?fref=ts" target="_blank">‚Ä¢ Ver m√°s aqu√≠</a>
 					</div>
 					<div id="blog">
 						<h3>INFORMATE EN NUESTRO BLOG</h3>
-						<p>En este espacio podr·s leer informes y redacciones muy interesantes y divertidos de temas de la actualidad.</p>
-						<a href="https://www.facebook.com/laciudadelaresidencia?fref=te">ï Ver m·s aquÌ</a>
+						<p>En este espacio podr√°s leer informes y redacciones muy interesantes y divertidos de temas de la actualidad.</p>
+						<a href="https://www.facebook.com/laciudadelaresidencia?fref=te">‚Ä¢ Ver m√°s aqu√≠</a>
 					</div>
 					<div id="historia">
-						<img src="images/1962-2012-50_anios_La_Ciudadela.jpg" title="1962-2012 - 50∞ - Ciudadela" alt="1962-2012 - 50∞ - Ciudadela" width="254" height="177" />
+						<img src="images/1962-2012-50_anios_La_Ciudadela.jpg" title="1962-2012 - 50¬∞ - Ciudadela" alt="1962-2012 - 50¬∞ - Ciudadela" width="254" height="177" />
 					</div>
 				</div>
 			</div>
 		</article>		
 		<article id="art-quienesSomos">
 			<div id="quienesSomos">
-				<img id="destacado" src="images/Destacado-quienesSomos.png" title="La Ciudadela est· abierta a todas, sin distinciÛn de raza, credo o religiÛn" alt="La Ciudadela est· abierta a todas, sin distinciÛn de raza, credo o religiÛn" width="234" height="234" />
+				<img id="destacado" src="images/Destacado-quienesSomos.png" title="La Ciudadela est√° abierta a todas, sin distinci√≥n de raza, credo o religi√≥n" alt="La Ciudadela est√° abierta a todas, sin distinci√≥n de raza, credo o religi√≥n" width="234" height="234" />
 				<div id="como_casa">
-					<h3>QuiÈnes somos </h3>
+					<h3>Qui√©nes somos </h3>
 					<p>
-						La Ciudadela es una residencia para universitarias que pertenece a la AsociaciÛn para el Fomento de la Cultura (AFC) quien ha confiado la orientaciÛn doctrinal y la atenciÛn espiritual a la Prelatura del Opus Dei, una instituciÛn de la Iglesia CatÛlica.
+						La Ciudadela es una residencia para universitarias que pertenece a la Asociaci√≥n para el Fomento de la Cultura (AFC) quien ha confiado la orientaci√≥n doctrinal y la atenci√≥n espiritual a la Prelatura del Opus Dei, una instituci√≥n de la Iglesia Cat√≥lica.
 					</p>
 				</div>
 				<div id="links">
-					<h3>Links de interÈs</h3>
+					<h3>Links de inter√©s</h3>
 					<p>
 						<a href="http://www.austral.edu.ar/" target="_blank">http://www.austral.edu.ar/</a><br />
 						<a href="http://www.uba.ar/" target="_blank">http://www.uba.ar/</a><br />
@@ -283,11 +283,11 @@
 						</p>
 						<img src="images/obj2.png" />
 						<p id="obj2">								
-							Fomentar el desarrollo integral de las residentes ofreciÈndoles diversas actividades acadÈmicas, deportivas, artÌsticas y espirituales, de las cuales podr·n participar libremente cuando lo deseen
+							Fomentar el desarrollo integral de las residentes ofreci√©ndoles diversas actividades acad√©micas, deportivas, art√≠sticas y espirituales, de las cuales podr√°n participar libremente cuando lo deseen
 						</p>
 						<!-- <img src="images/obj3.png" />
 						<p id="obj3">
-							Lograr que la residencia sea, desde el principio, su casa, a travÈs de un clima de alegrÌa y de respeto hacia el otro.
+							Lograr que la residencia sea, desde el principio, su casa, a trav√©s de un clima de alegr√≠a y de respeto hacia el otro.
 						</p> -->
 					</div>
 				</div>
@@ -306,11 +306,11 @@
 					</h3>
 					<br />
 					<ul>
-						<li>Visitas a museos, ferias tecnolÛgicas, galerÌas de arte y fotogr·ficas.</li>
+						<li>Visitas a museos, ferias tecnol√≥gicas, galer√≠as de arte y fotogr√°ficas.</li>
 					</ul>
 					<p>
-					La Residencia propone un clima de di·logo intercultural y para ello organiza actividades que despierten el interÈs en cuestiones 
-					especÌficas. Los temas son tan variados que llegan a cubrir aspectos relacionados con numerosas profesiones y las cuestiones de 
+					La Residencia propone un clima de di√°logo intercultural y para ello organiza actividades que despierten el inter√©s en cuestiones 
+					espec√≠ficas. Los temas son tan variados que llegan a cubrir aspectos relacionados con numerosas profesiones y las cuestiones de 
 					actualidad que se desprenden de ellas. A partir de estas actividades se generen nuevas propuestas que enriquecen a las participantes. 
 					</p>
 				</div>
@@ -321,14 +321,14 @@
 					</h3>
 					<br />
 					<ul>
-						<li>Clases sobre Sacramentos, Vida espiritual y antropologÌa.</li>
-						<li>Asesoramiento en las lecturas y pr·cticas espirituales.</li>
+						<li>Clases sobre Sacramentos, Vida espiritual y antropolog√≠a.</li>
+						<li>Asesoramiento en las lecturas y pr√°cticas espirituales.</li>
 					</ul>
 					<p>	
 						La persona es comprendida como un todo, tanto en sus necesidades humanas y materiales como en sus necesidades espirituales. La 
-						formaciÛn espiritual que brinda la residencia est· confiada al asesoramiento de la Prelatura del Opus Dei, quienes a travÈs del 
-						Consejo de DirecciÛn y el Capell·n asignado, garantizan que todas las que lo desean puedan acceder a una formaciÛn integral y 
-						personal en la doctrina de la Iglesia CatÛlica.
+						formaci√≥n espiritual que brinda la residencia est√° confiada al asesoramiento de la Prelatura del Opus Dei, quienes a trav√©s del 
+						Consejo de Direcci√≥n y el Capell√°n asignado, garantizan que todas las que lo desean puedan acceder a una formaci√≥n integral y 
+						personal en la doctrina de la Iglesia Cat√≥lica.
 					</p>
 				</div>
 				<div class="act-block">
@@ -341,9 +341,9 @@
 						<li>Paseos en bicicleta, cabalgatas, hockey, tenis, rollers, caminatas, gimnasia, etc.</li>
 					</ul>
 					<p>	
-						El ejercicio fÌsico y el deporte en equipo es parte fundamental para garantizar que las estudiantes conserven su buena salud 
-						fÌsica y mental, contribuyendo al esparcimiento. Estas actividades se planifican para que sean compatibles con el estudio 
-						intenso y las dem·s actividades.
+						El ejercicio f√≠sico y el deporte en equipo es parte fundamental para garantizar que las estudiantes conserven su buena salud 
+						f√≠sica y mental, contribuyendo al esparcimiento. Estas actividades se planifican para que sean compatibles con el estudio 
+						intenso y las dem√°s actividades.
 					</p>
 				</div>
 				<div class="act-block">
@@ -353,13 +353,13 @@
 					</h3>
 					<br />
 					<ul>
-						<li>Visitas a Ancianos y enfermos en hospitales p˙blicos</li>
+						<li>Visitas a Ancianos y enfermos en hospitales p√∫blicos</li>
 						<li>Catequesis y apoyo escolar</li>
 						<li>Viajes Solidarios: Asistencia al centro CONIN en Mendoza</li>
 					</ul>
 					<p>
-						La apertura a las necesidades de los dem·s es una parte fundamental de la formaciÛn de las personas, m·s a˙n cuando est·n 
-						desarrollando su carrera universitaria. La Residencia organiza actividades diversas donde los m·s necesitados se ven beneficiados 
+						La apertura a las necesidades de los dem√°s es una parte fundamental de la formaci√≥n de las personas, m√°s a√∫n cuando est√°n 
+						desarrollando su carrera universitaria. La Residencia organiza actividades diversas donde los m√°s necesitados se ven beneficiados 
 						tanto como los mismos que les prestan su ayuda. Brindar tiempo a este tipo de actividades es la mejor forma de contribuir con el 
 						desarrollo de la sociedad.
 					</p>
@@ -370,16 +370,16 @@
 			<h2>Instalaciones</h2>
 			<iframe src="iframeServicios.html" width="968" height="220" style="border: 0 none; overflow: hidden; margin-left: -8px;" ></iframe>
 			<ul class="ulHabita">
-				<li>Habitaciones compartidas de a 3, 4 Û 5 personas.</li>
-				<li>PensiÛn completa: desayuno, almuerzo, tÈ y cena.</li>
+				<li>Habitaciones compartidas de a 3, 4 √≥ 5 personas.</li>
+				<li>Pensi√≥n completa: desayuno, almuerzo, t√© y cena.</li>
 				<li>Lavado y planchado de ropa blanca.</li>
 				<li>Limpieza del inmueble.</li>
 				<li>2 salas de estudios silenciosas y 3 para trabajo en equipo.</li>
 			</ul>
 			<ul class="ulHabita">
-				<li>RecepciÛn de mensajes telefÛnicos durante todo el dÌa.</li>
+				<li>Recepci√≥n de mensajes telef√≥nicos durante todo el d√≠a.</li>
 				<li>Computadoras y servicio a Internet WiFi.</li>
-				<li>En la cocina, nuestro men˙ es preparado por un personal altamente capacitado que prioriza la excelencia y la buena presentaciÛn 
+				<li>En la cocina, nuestro men√∫ es preparado por un personal altamente capacitado que prioriza la excelencia y la buena presentaci√≥n 
 					de las comidas.
 				</li>
 			</ul>
@@ -388,10 +388,10 @@
 			<div id="centro">
 				<h2>Recoleta</h2>
 				<p>
-					La Ciudadela est· situada en un lugar estratÈgico, a poca distancia de universidades como la Universidad de Buenos Aires, Instituto TecnolÛgico de Buenos Aires, Universidad Austral, Universidad de Belgrano, Universidad TecnolÛgica Nacional, Universidad del Salvador, Pontificia Universidad CatÛlica Argentina, Universidad de Ciencias Empresariales y Universidad de San AndrÈs, entre otras.
+					La Ciudadela est√° situada en un lugar estrat√©gico, a poca distancia de universidades como la Universidad de Buenos Aires, Instituto Tecnol√≥gico de Buenos Aires, Universidad Austral, Universidad de Belgrano, Universidad Tecnol√≥gica Nacional, Universidad del Salvador, Pontificia Universidad Cat√≥lica Argentina, Universidad de Ciencias Empresariales y Universidad de San Andr√©s, entre otras.
 					<br /><br />
-					<strong>Transporte p˙blico</strong><br />
-					Circulan en las cercanÌas las siguientes lÌneas de colectivos: 5, 10, 12, 17, 26, 27 (ramales 1-3-4), 38, 39, 41, 59, 60, 61, 67, 75, 92, 93, 95, 101, 102, 106, 108, 110, 111, 115, 118, 124, 132, 142, 150, 152. Subte lÌnea D. A diez cuadras de la estaciÛn Terminal Retiro.
+					<strong>Transporte p√∫blico</strong><br />
+					Circulan en las cercan√≠as las siguientes l√≠neas de colectivos: 5, 10, 12, 17, 26, 27 (ramales 1-3-4), 38, 39, 41, 59, 60, 61, 67, 75, 92, 93, 95, 101, 102, 106, 108, 110, 111, 115, 118, 124, 132, 142, 150, 152. Subte l√≠nea D. A diez cuadras de la estaci√≥n Terminal Retiro.
 				</p>
 			</div>
 			<iframe width="543" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.ar/maps?f=q&amp;source=s_q&amp;hl=es-419&amp;geocode=&amp;q=buenos+aires,+Rodriguez+Pe%C3%B1a+1489&amp;aq=&amp;sll=-34.592802,-58.391047&amp;sspn=0.009592,0.021136&amp;ie=UTF8&amp;hq=&amp;hnear=Rodr%C3%ADguez+Pena+1489,+Recoleta,+Buenos+Aires&amp;ll=-34.592802,-58.391047&amp;spn=0.009592,0.021136&amp;t=m&amp;z=14&output=embed&iwloc=near"></iframe>
@@ -399,11 +399,11 @@
 		<article id="opus">		
 			<img src="images/SAN_JOSEMARIA_ESCRIVA.jpg" />
 			<h2>Opus Dei</h2>
-			<p>El Opus Dei -Obra de Dios, en latÌn- es una instituciÛn jer·rquica de la Iglesia catÛlica, una prelatura personal, que tiene como finalidad contribuir a la misiÛn evangelizadora de la Iglesia. Concretamente, se propone difundir una profunda toma de conciencia de la llamada universal a la santidad y del valor santificador del trabajo ordinario. El Opus Dei fue fundado por San JosemarÌa Escriv· el 2 de octubre de 1928.
-			<br /><br />"Es en medio de las cosas m·s materiales de la tierra donde debemos santificarnos, sirviendo a Dios y a todos los hombres..." HomilÌa Amar al mundo apasionadamente, 8-10-1967.</p>
-			<span>San JosemarÌa Escriv·<br />Fundador del Opus Dei</span>
+			<p>El Opus Dei -Obra de Dios, en lat√≠n- es una instituci√≥n jer√°rquica de la Iglesia cat√≥lica, una prelatura personal, que tiene como finalidad contribuir a la misi√≥n evangelizadora de la Iglesia. Concretamente, se propone difundir una profunda toma de conciencia de la llamada universal a la santidad y del valor santificador del trabajo ordinario. El Opus Dei fue fundado por San Josemar√≠a Escriv√° el 2 de octubre de 1928.
+			<br /><br />"Es en medio de las cosas m√°s materiales de la tierra donde debemos santificarnos, sirviendo a Dios y a todos los hombres..." Homil√≠a Amar al mundo apasionadamente, 8-10-1967.</p>
+			<span>San Josemar√≠a Escriv√°<br />Fundador del Opus Dei</span>
 			<div id="opusLinks">
-				<h4>LINKS DE INTER…S</h4>
+				<h4>LINKS DE INTER√âS</h4>
 				<p>
 					<a href="http://www.opusdei.org.ar/" target="_blank">http://www.opusdei.org.ar/</a><br />
 					<a href="http://www.escrivaobras.org/" target="_blank">http://www.escrivaobras.org/ </a>
@@ -423,7 +423,7 @@
 			<form method="POST" action="">
 				<label for="nombre">Nombre y Apellido:</label>
 				<input type="text" name="nombre" id="nombre" />
-				<label for="mail">DirecciÛn email:</label>
+				<label for="mail">Direcci√≥n email:</label>
 				<input type="text" name="mail" id="mail" />
 				<label for="msj">Consulta:</label>
 				<textarea name="msj" id="msj"></textarea>
@@ -439,15 +439,15 @@
 					<h4>DATOS PERSONALES DE FUTURA RESIDENTE</h4>
 					<label for="nombre">Nombre y Apellido:</label>
 					<input type="text" name="Snombre" id="Snombre" />
-					<label for="dir">DirecciÛn:</label>
+					<label for="dir">Direcci√≥n:</label>
 					<input type="text" name="dir" id="dir" />
 					<label for="ciudad">Ciudad:</label>
-					<label for="pais">PaÌs:</label>
+					<label for="pais">Pa√≠s:</label>
 					<input type="text" name="ciudad" id="ciudad" />					
 					<input type="text" name="pais" id="pais" />
-					<label for="email">DirecciÛn email:</label>
+					<label for="email">Direcci√≥n email:</label>
 					<input type="text" name="Smail" id="Smail" />
-					<label for="tel">TelÈfono:</label>
+					<label for="tel">Tel√©fono:</label>
 					<label for="nac">Fecha de Nacimiento:</label>
 					<input type="text" name="tel" id="tel" />
 					<input type="text" name="nac" id="nac" onblur="if(this.value == '') { this.value='DD/MM/AAAA'}" onfocus="if(this.value == 'DD/MM/AAAA') { this.value='' }" value="DD/MM/AAAA" />
@@ -455,29 +455,29 @@
 					<input type="text" name="col" id="col" />
 					<label for="carrera">Carrega elegida:</label>
 					<input type="text" name="carrera" id="carrera" />
-					<label for="anio">Solicitud para el aÒo:</label>
+					<label for="anio">Solicitud para el a√±o:</label>
 					<input type="text" name="anio" id="anio" value="AAAA" onblur="if(this.value == '') { this.value='AAAA'}" onfocus="if(this.value == 'AAAA') { this.value='' }" />
 					<label for="uni">Universidad:</label>
 					<input type="text" name="uni" id="uni" />
-					<label for="activ">Actividades de interÈs:</label>
+					<label for="activ">Actividades de inter√©s:</label>
 					<label for="otros">Otros estudios:</label>
 					<input type="text" name="activ" id="activ" />
 					<input type="text" name="otros" id="otros" />
 				</div>
 				<div id="colB">
-					<p>Por favor, complet· el siguiente fomulario<br />si dese·s enviar tu solicitud de ingreso online.<br />Todos los campos son obligatorios. Gracias.</p>
-					<label for="conocio">CÛmo conociÛ la residencia?</label>
+					<p>Por favor, complet√° el siguiente fomulario<br />si dese√°s enviar tu solicitud de ingreso online.<br />Todos los campos son obligatorios. Gracias.</p>
+					<label for="conocio">C√≥mo conoci√≥ la residencia?</label>
 					<textarea name="conocio" id="conocio"></textarea>
-					<label for="espera">QuÈ espera de la residencia?</label>
+					<label for="espera">Qu√© espera de la residencia?</label>
 					<textarea name="espera" id="espera"></textarea><br /><br />
 					<h4>DATOS DE FAMILIAR O CONOCIDO EN BUENOS AIRES<br /><span style="font-size: 10px;">(Estos datos no son obligatorios)</span></h4>
 					<label for="nombreF">Nombre y Apellido:</label>
 					<input type="text" name="nombreF" id="nombreF" />
-					<label for="dirF">DirecciÛn:</label>
+					<label for="dirF">Direcci√≥n:</label>
 					<input type="text" name="dirF" id="dirF" />
 					<label for="ciudadF">Ciudad:</label>
 					<input type="text" name="ciudadF" id="ciudadF" />
-					<label for="telF">TelÈfono:</label>
+					<label for="telF">Tel√©fono:</label>
 					<input type="text" name="telF" id="telF" />
 					<label><input type="button" id="enviarSolicitud" value="ENVIAR" /><span id="respEnvio"></span></label>
 				</div>
@@ -485,7 +485,7 @@
 		</div>
 	</section>
 	<footer>
-		Copyright © 2012 - Residencia Universitaria La Ciudadela | Rodriguez PeÒa 1489 - (011) 48110450 | 
+		Copyright ¬© 2012 - Residencia Universitaria La Ciudadela | Rodriguez Pe√±a 1489 - (011) 48110450 | 
 		<a href="mailto:info@residenciaciudadela.org.ar">info@residenciaciudadela.org.ar</a>
 	</footer>
 	
